# eazyai

./: .gitignore  Cargo.toml  Dioxus.toml  Easyai_0.1.0_x64.dmg  README.md  data.json  how to compile
assets/: frame.css  icon.icns  main.css
src/: frame.rs  landing.rs  loading_and_folders.rs  main.rs  random_functions.rs
src/windows/: architecture.rs  data.rs  mod.rs  randomfunction2.rs  results.rs  run.rs  settings.rs
