[package]
name = "easyai"
version = "0.1.0"
authors = ["KellerPolk <122951289+KellerPolk@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dioxus = { version = "0.6.0", features = [
    "router",
] } # <----- add "router"dirs = "6.0.0"
rfd = "0.14"
dirs = "6.0.0"
dioxus-router = "0.6.3"
csv = "1.3.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.19"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
